--- a/PlanetWallet/Views/6_Transfer/Cells/ContactCell.xib
+++ b/PlanetWallet/Views/6_Transfer/Cells/ContactCell.xib
@@ -23,17 +23,19 @@
             <connections>
                 <outlet property="addressLb" destination="7p9-M1-RWK" id="aDD-6n-SJu"/>
                 <outlet property="containerView" destination="iN0-l3-epB" id="mdb-ga-KeH"/>
+                <outlet property="deleteBtn" destination="7Vb-a1-1gC" id="VCx-5U-B5P"/>
+                <outlet property="deleteImgView" destination="55w-6l-SWx" id="tfN-D0-Bxz"/>
                 <outlet property="planetName" destination="15n-44-e6n" id="Efu-Hb-mdw"/>
                 <outlet property="planetView" destination="bdP-dJ-sqq" id="qXA-lK-QpV"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="85"/>
+            <rect key="frame" x="0.0" y="0.0" width="440" height="102"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bdP-dJ-sqq" customClass="PlanetView" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="21" y="22.5" width="40" height="40"/>
+                    <rect key="frame" x="21" y="31" width="40" height="40"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="JFt-Hb-EPo"/>
@@ -41,7 +43,7 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Junhoo_o" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="15n-44-e6n" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="81" y="16" width="284" height="23.5"/>
+                    <rect key="frame" x="81" y="24.5" width="349" height="23.5"/>
                     <fontDescription key="fontDescription" name="WorkSans-Medium" family="Work Sans" pointSize="16"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -52,7 +54,7 @@
                     </userDefinedRuntimeAttributes>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0x53B6…5b78" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7p9-M1-RWK" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="81" y="45.5" width="284" height="20.5"/>
+                    <rect key="frame" x="81" y="54" width="349" height="20.5"/>
                     <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                     <color key="textColor" name="detailTextDark"/>
                     <nil key="highlightedColor"/>
@@ -62,16 +64,38 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageSearchDeleteGray" translatesAutoresizingMaskIntoConstraints="NO" id="55w-6l-SWx" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
+                    <rect key="frame" x="401" y="39" width="24" height="24"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="24" id="6LM-Ik-nvh"/>
+                        <constraint firstAttribute="height" constant="24" id="a6x-eu-5gU"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="image" keyPath="themeImage" value="imageSearchDeleteBlue"/>
+                    </userDefinedRuntimeAttributes>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Vb-a1-1gC">
+                    <rect key="frame" x="401" y="39" width="24" height="24"/>
+                    <connections>
+                        <action selector="didTouchedDelete:" destination="-1" eventType="touchUpInside" id="mOW-nW-6Jn"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="7Vb-a1-1gC" firstAttribute="bottom" secondItem="55w-6l-SWx" secondAttribute="bottom" id="12H-qb-2kn"/>
                 <constraint firstItem="15n-44-e6n" firstAttribute="leading" secondItem="bdP-dJ-sqq" secondAttribute="trailing" constant="20" id="4He-wT-F1f"/>
                 <constraint firstItem="bdP-dJ-sqq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="21" id="6ou-nR-Zie"/>
                 <constraint firstItem="bdP-dJ-sqq" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="A8B-0H-Kph"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="7p9-M1-RWK" secondAttribute="trailing" constant="10" id="AI0-Wj-86Q"/>
+                <constraint firstItem="7Vb-a1-1gC" firstAttribute="top" secondItem="55w-6l-SWx" secondAttribute="top" id="BzO-bq-rwH"/>
                 <constraint firstItem="7p9-M1-RWK" firstAttribute="leading" secondItem="bdP-dJ-sqq" secondAttribute="trailing" constant="20" id="Vgs-ZZ-z1L"/>
+                <constraint firstItem="55w-6l-SWx" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="XvX-He-pjq"/>
+                <constraint firstItem="7Vb-a1-1gC" firstAttribute="leading" secondItem="55w-6l-SWx" secondAttribute="leading" id="aOh-gn-4EZ"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="55w-6l-SWx" secondAttribute="trailing" constant="15" id="dzU-L0-Msf"/>
                 <constraint firstItem="15n-44-e6n" firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="-3" id="fX3-KF-s25"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="15n-44-e6n" secondAttribute="trailing" constant="10" id="gYn-Pb-OuV"/>
+                <constraint firstItem="7Vb-a1-1gC" firstAttribute="trailing" secondItem="55w-6l-SWx" secondAttribute="trailing" id="gu8-FH-JYV"/>
                 <constraint firstItem="7p9-M1-RWK" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="3" id="noK-qS-WHo"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -81,10 +105,12 @@
                     <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
-            <point key="canvasLocation" x="132" y="152.92353823088456"/>
+            <point key="canvasLocation" x="-33.600000000000001" y="154.72263868065968"/>
         </view>
     </objects>
     <resources>
+        <image name="imageSearchDeleteBlue" width="36" height="36"/>
+        <image name="imageSearchDeleteGray" width="36" height="36"/>
         <namedColor name="detailTextDark">
             <color red="0.36078431372549019" green="0.34901960784313724" blue="0.39215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
