--- a/PlanetWallet/Views/4_Main/Cells/ETHCoinCell.xib
+++ b/PlanetWallet/Views/4_Main/Cells/ETHCoinCell.xib
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -30,14 +34,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eth" translatesAutoresizingMaskIntoConstraints="NO" id="K5T-1h-MPD">
-                    <rect key="frame" x="20" y="25" width="20" height="20"/>
+                    <rect key="frame" x="20" y="23" width="24" height="24"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="20" id="bGC-d6-lOg"/>
-                        <constraint firstAttribute="height" constant="20" id="xWe-Iv-2kc"/>
+                        <constraint firstAttribute="width" constant="24" id="bGC-d6-lOg"/>
+                        <constraint firstAttribute="height" constant="24" id="xWe-Iv-2kc"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ETH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YEW-xQ-oEs" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="50" y="25.5" width="31" height="19"/>
+                    <rect key="frame" x="54" y="23.5" width="32" height="23.5"/>
                     <fontDescription key="fontDescription" name="WorkSans-Medium" family="Work Sans" pointSize="16"/>
                     <color key="textColor" name="textColorDark"/>
                     <nil key="highlightedColor"/>
@@ -48,7 +52,7 @@
                     </userDefinedRuntimeAttributes>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Qe-kX-GhK" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="314.5" y="16" width="15.5" height="19"/>
+                    <rect key="frame" x="311.5" y="11.5" width="18.5" height="23.5"/>
                     <fontDescription key="fontDescription" name="WorkSans-Medium" family="Work Sans" pointSize="16"/>
                     <color key="textColor" name="textColorDark"/>
                     <nil key="highlightedColor"/>
@@ -69,7 +73,7 @@
                     </userDefinedRuntimeAttributes>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 USD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="smp-3K-oxv" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="295" y="37" width="35" height="14"/>
+                    <rect key="frame" x="293.5" y="37" width="36.5" height="17.5"/>
                     <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="12"/>
                     <color key="textColor" name="detailTextDark"/>
                     <nil key="highlightedColor"/>
@@ -84,11 +88,11 @@
             <constraints>
                 <constraint firstItem="x2p-N7-O64" firstAttribute="leading" secondItem="2Qe-kX-GhK" secondAttribute="trailing" constant="10" id="4F2-ZW-ffc"/>
                 <constraint firstItem="x2p-N7-O64" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="25" id="EOV-Id-Rhw"/>
-                <constraint firstItem="K5T-1h-MPD" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="25" id="EPB-4Z-ERf"/>
                 <constraint firstAttribute="trailing" secondItem="x2p-N7-O64" secondAttribute="trailing" constant="15" id="KMm-mD-2mC"/>
                 <constraint firstItem="YEW-xQ-oEs" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="R4e-s3-Qha"/>
                 <constraint firstItem="smp-3K-oxv" firstAttribute="top" secondItem="2Qe-kX-GhK" secondAttribute="bottom" constant="2" id="kxR-E3-7eb"/>
                 <constraint firstItem="smp-3K-oxv" firstAttribute="trailing" secondItem="2Qe-kX-GhK" secondAttribute="trailing" id="lFw-Az-SK2"/>
+                <constraint firstItem="K5T-1h-MPD" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="ok1-eC-9zy"/>
                 <constraint firstItem="K5T-1h-MPD" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="qRy-Df-eob"/>
                 <constraint firstItem="2Qe-kX-GhK" firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="centerY" id="rq8-VI-X7T"/>
                 <constraint firstItem="YEW-xQ-oEs" firstAttribute="leading" secondItem="K5T-1h-MPD" secondAttribute="trailing" constant="10" id="sbW-Ew-EU4"/>
