--- a/PlanetWallet/Views/4_Main/Components/BottomPanelComponent.xib
+++ b/PlanetWallet/Views/4_Main/Components/BottomPanelComponent.xib
@@ -45,7 +45,7 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9r7-Yo-a1o" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="75" y="37" width="6" height="21"/>
+                    <rect key="frame" x="80" y="37" width="6" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="X6g-4P-bKM"/>
                     </constraints>
@@ -54,7 +54,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rlv-MI-9da" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="75" y="17" width="5" height="16"/>
+                    <rect key="frame" x="80" y="17" width="5" height="16"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="16" id="Wha-Yy-7Kj"/>
                     </constraints>
@@ -68,7 +68,7 @@
                     </userDefinedRuntimeAttributes>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ka2-65-ZcV" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="85" y="37" width="6" height="21"/>
+                    <rect key="frame" x="90" y="37" width="6" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="6do-Dp-1YL"/>
                     </constraints>
@@ -81,21 +81,21 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_main_bottom_transfer_gray" translatesAutoresizingMaskIntoConstraints="NO" id="uMy-Li-BdU" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageMainBottomNextGray" translatesAutoresizingMaskIntoConstraints="NO" id="uMy-Li-BdU" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
                     <rect key="frame" x="358" y="20" width="40" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="SCt-rT-wga"/>
                         <constraint firstAttribute="width" constant="40" id="f5G-sv-NSi"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="image" keyPath="themeImage" value="image_main_bottom_transfer_blue"/>
+                        <userDefinedRuntimeAttribute type="image" keyPath="themeImage" value="imageMainBottomNextBlue"/>
                     </userDefinedRuntimeAttributes>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Ka2-65-ZcV" firstAttribute="top" secondItem="9r7-Yo-a1o" secondAttribute="top" id="0Cs-gT-ykE"/>
-                <constraint firstItem="9r7-Yo-a1o" firstAttribute="leading" secondItem="XdX-85-MQJ" secondAttribute="trailing" constant="10" id="1AQ-RJ-wmw"/>
+                <constraint firstItem="9r7-Yo-a1o" firstAttribute="leading" secondItem="XdX-85-MQJ" secondAttribute="trailing" constant="15" id="1AQ-RJ-wmw"/>
                 <constraint firstItem="Rlv-MI-9da" firstAttribute="top" secondItem="XdX-85-MQJ" secondAttribute="top" id="KFU-35-XjF"/>
                 <constraint firstAttribute="bottom" secondItem="XdX-85-MQJ" secondAttribute="bottom" constant="97" id="NYY-eh-iy0"/>
                 <constraint firstItem="XdX-85-MQJ" firstAttribute="leading" secondItem="J3m-SX-0eQ" secondAttribute="leading" constant="20" id="RSU-mU-Goj"/>
@@ -111,7 +111,7 @@
                 <constraint firstItem="uMy-Li-BdU" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ka2-65-ZcV" secondAttribute="trailing" constant="10" id="nVK-SF-jsV"/>
                 <constraint firstItem="Ka2-65-ZcV" firstAttribute="leading" secondItem="9r7-Yo-a1o" secondAttribute="trailing" constant="4" id="riL-Of-YWy"/>
                 <constraint firstItem="uMy-Li-BdU" firstAttribute="top" secondItem="J3m-SX-0eQ" secondAttribute="top" constant="20" id="ujN-Wz-SCp"/>
-                <constraint firstItem="Rlv-MI-9da" firstAttribute="leading" secondItem="XdX-85-MQJ" secondAttribute="trailing" constant="10" id="uw1-hw-QNr"/>
+                <constraint firstItem="Rlv-MI-9da" firstAttribute="leading" secondItem="XdX-85-MQJ" secondAttribute="trailing" constant="15" id="uw1-hw-QNr"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
@@ -125,7 +125,7 @@
         </view>
     </objects>
     <resources>
-        <image name="image_main_bottom_transfer_blue" width="60" height="60"/>
-        <image name="image_main_bottom_transfer_gray" width="60" height="60"/>
+        <image name="imageMainBottomNextBlue" width="60" height="60"/>
+        <image name="imageMainBottomNextGray" width="60" height="60"/>
     </resources>
 </document>
